[package]
name = "air001-generated"
version = "1.1.3"
edition = "2024"
description = "Generated PAC for Air001 microcontroller"
readme = "README.md"
repository = "https://github.com/ithilelda/air001_generated"
license = "MIT"
keywords = ["embedded", "air001"]
categories = ["no-std", "embedded", "hardware-support"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
critical-section = { version = "1.2.0", optional = true }
vcell = "0.1.3"

[features]
default = ["rt"]
rt = ["cortex-m-rt/device"]